# blackboxprotobuf

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README-LIBRARY.md  README.md  Vagrantfile  lib-requirements.txt  setup.py
.github/workflows/: python-publish.yml
blackboxprotobuf/burp/: editor.py  extender.py  typedef_editor.py  typedef_tab.py  user_funcs.py
blackboxprotobuf/lib/: interface.py  protofile.py
blackboxprotobuf/lib/types/: fixed.py  length_delim.py  type_maps.py  varint.py
burp/: README.md
burp/blackboxprotobuf/: __init__.py
burp/blackboxprotobuf/burp/: __init__.py  editor.py  extender.py  typedef_editor.py  typedef_tab.py  user_funcs.py
docs/: TypeDefs.md
lib/: CLI.md  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
lib/blackboxprotobuf/: __init__.py  __main__.py
lib/blackboxprotobuf/lib/: __init__.py  api.py  config.py  exceptions.py  protofile.py  pytypes.py
lib/blackboxprotobuf/lib/payloads/: __init__.py  grpc.py  gzip.py
lib/blackboxprotobuf/lib/types/: __init__.py  fixed.py  length_delim.py  type_maps.py  varint.py  wiretypes.py
lib/tests/: README.md  generate_payload.sh  requirements-python2-dev.txt  run_decoder.py
lib/tests/payloads/: Test.proto
lib/tests/proxy_tests/: Makefile  Test.proto  grpc_client.py  grpc_server.py  http_client.py  http_server.py  requirements.txt  websocket_client.py  websocket_server.py
lib/tests/py_test/: strategies.py  test_exceptions.py  test_fixed.py  test_json.py  test_length_delim.py  test_payloads.py  test_perf.py  test_protobuf.py  test_protofile.py  test_typedef.py  test_varint.py
mitmproxy/: README.md  bbpb.py  deps
tests/: test-requirements.txt
tests/payloads/: test_message.in  test_message.out
tests/py_test/: strategies.py  test_fixed.py  test_length_delim.py  test_protobuf.py  test_varint.py
