[tool.poetry]
name = "bbpb"
version = "1.0.0"
description = "Library for working with protobuf messages without a protobuf type definition."
authors = ["Ryan Winkelmaier <ryan.winkelmaier@nccgroup.com>"]
license = "MIT"
repository = "https://github.com/nccgroup/blackboxprotobuf"
readme = "README.md"
keywords = ["protobuf"]
exclude = ["./tests"]
packages = [
    { include = "blackboxprotobuf" }
]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = { version = "^3.19"}
six = "^1.16"


[tool.poetry.dev-dependencies]
pytest = { version = "^6.2" }
hypothesis = { version = "^6" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
