[tool.poetry]
name = "bbpb"
version = "1.0.1"
description = "Library for working with protobuf messages without a protobuf type definition."
authors = ["Ryan Winkelmaier <ryan.winkelmaier@nccgroup.com>"]
license = "MIT"
repository = "https://github.com/nccgroup/blackboxprotobuf"
readme = "README.md"
keywords = ["protobuf"]
exclude = ["./tests"]
packages = [
    { include = "blackboxprotobuf" }
]

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.20"
six = "^1.16"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
hypothesis = "^6.31.6"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
